# src/app/api/models/admin-response.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface AdminResponse {
+  description?: string;
+  email?: string;
+  firstName?: string;
+  lastName?: string;
+}
